# openscan-mm-adapter

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE.txt  NiFpga_OpenScanFPGAHost.h  OpenScan.cpp  OpenScan.h  OpenScan.sln  OpenScan.vcxproj  OpenScan.vcxproj.filters  README.md  Waveform.cpp  Waveform.h  meson.build
subprojects/: .gitignore  MMDevice.wrap  OpenScanLib.wrap
subprojects/packagefiles/MMDevice/: meson.build
